<resources>
    <string name="app_name">HDDPOS_TEST</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_basic_data_text">基础资料</string>
    <string name="main_member_management_text">会员管理</string>
    <string name="main_future_sales_text">前台销售</string>
    <string name="main_inventory_management_text">库存管理</string>
    <string name="main_the_report_center_text">报表中心</string>
    <string name="main_system_settings_text">系统管理</string>
    <string name="basic_data_food_information_maintenance_text">菜品资料维护</string>
    <string name="basic_data_table_data_text">餐桌资料</string>
    <string name="basic_data_cashier_mode_text">收银方式</string>
    <string name="basic_data_cashier_mode_textset">收银方式设置</string>
    <string name="basic_data_business_trips_text">营业班次</string>
    <string name="basic_data_course_information_text">套菜资料</string>
    <string name="basic_data_dishes_practice_settings_text">菜品做法设置</string>
    <string name="basic_data_dishes_practice_select_text">菜品做法选择</string>
    <string name="basic_data_food_materials_food_par_title">菜品编码规则</string>
    <string name="basic_data_dishes_kitchen_play_set_text">菜品厨打设置</string>
    <string name="basic_data_dishes_kitchen_play_bitset_text">菜品厨打说明设置--批设置</string>
    <string name="basic_data_dishes_kitchen_print_bitset_text">打印批设置</string>
    <string name="basic_data_dishes_kitchen_play_bitset_shuoming">【注】批处理时，指定大类或者小类的菜品以前设置做法将覆盖</string>
    <string name="basic_data_special_reason_text">特殊操作原因</string>
    <string name="food_materials_category_set">品类设置</string>
    <string name="food_materials_unit_set">单位设置</string>
    <string name="food_materials_funit_set">菜品单位设置</string>
    <string name="food_materials_add">新增</string>
    <string name="food_materials_btadd">批量新增</string>
    <string name="food_materials_modiy">修改</string>
    <string name="food_materials_before">上一行</string>
    <string name="food_materials_after">下一行</string>
    <string name="food_materials_del">删除</string>
    <string name="food_materials_parameters">参数</string>
    <string name="food_materials_parametersset">参数设置</string>
    <string name="food_materials_query">查询</string>
    <string name="food_materials_refresh">刷新</string>
    <string name="food_materials_print">打印</string>
    <string name="food_materials_stopshow">显示停用菜品</string>
    <string name="food_materials_quit">退出</string>
    <string name="food_materials_goon">继续</string>
    <string name="food_materials_save">保存</string>
    <string name="food_materials_allcates">全部类型</string>
    <string name="food_materials_retrieve">编码|拼音简码|品名模糊查询</string>
    <string name="food_materials_table_line_numbers">行号</string>
    <string name="food_materials_table_coding">品码</string>
    <string name="food_materials_tabel_foodname">品名</string>
    <string name="food_materials_tabel_foodnumber">品号</string>
    <string name="food_materials_table_simple_coding">拼音简码</string>
    <string name="food_materials_table_bigcate_coding">大类编码</string>
    <string name="food_materials_table_smallcate_coding">小类编码</string>
    <string name="food_materials_table_smallcate_name">小类名称</string>
    <string name="food_materials_table_bigcate">大类</string>
    <string name="food_materials_table_bigcatename">大类名称</string>
    <string name="food_materials_table_smallcate">小类</string>
    <string name="food_materials_food_type_bigcate">菜品大类</string>
    <string name="food_materials_food_type_smallcate">菜品小类</string>
    <string name="food_materials_table_unit">单位</string>
    <string name="food_materials_table_price">价格</string>
    <string name="food_materials_table_rate">税率%</string>
    <string name="food_materials_table_directsell">直销商品</string>
    <string name="food_materials_table_package">套餐</string>
    <string name="food_materials_table_commonfood">常用菜</string>
    <string name="food_materials_table_discount">折扣</string>
    <string name="food_materials_table_can_discount">可折扣</string>
    <string name="food_materials_table_currentprice">时价</string>
    <string name="food_materials_table_currentpricefood">时价菜</string>
    <string name="food_materials_table_temporaryfood">临时菜</string>
    <string name="food_materials_table_stopuse">停用</string>
    <string name="food_materials_food_type">菜品类型设置</string>
    <string name="food_materials_food_typedd">菜品类型</string>
    <string name="food_materials_food_type_print">标签打印</string>
    <string name="food_materials_food_startparameter">启用菜品编码生成规则</string>
    <string name="food_materials_food_parameterprompt">(已经存在菜品资料时不能修改此参数)</string>
    <string name="food_materials_food_rulesset">规则设置(只有启动，设置才有效)-------------------------------------</string>
    <string name="basic_data_food_materials_food_par_fuhao">-------------------------------------------------------</string>
    <string name="food_materials_food_add_coding">菜品编码</string>
    <string name="food_materials_food_add_service_charge">收服务费</string>
    <string name="food_materials_food_add_service_fees">服务提成</string>
    <string name="food_materials_food_add_feesway">提成方式</string>
    <string name="food_materials_food_add_feesbili">提成比例</string>
    <string name="food_materials_food_add_feesquota">提成定额</string>
    <string name="food_materials_food_add_dixiao">计入低消</string>
    <string name="food_materials_food_add_auxiliary_code">辅助编码</string>
    <string name="food_materials_food_add_procurement">采购单位</string>
    <string name="food_materials_food_add_proportion">采购与菜品单位比例：</string>
    <string name="food_materials_food_add_purchase_price">采购价：</string>
    <string name="food_materials_food_add_percent">%</string>
    <string name="food_materials_food_add_percent2">: 1</string>
    <string name="food_materials_food_add_currentrecord">当前记录：</string>
    <string name="food_materials_food_add_clues">辅助编码作为商品条码时，只有在编码点菜方式下支持扫描枪点菜，其它方式不支持使用</string>
    <string name="food_materials_food_add_foodname">菜品名称</string>
    <string name="food_materials_food_type_foodunit_set_up_coding">编码</string>
    <string name="food_materials_food_type_foodunit_set_up_numbertype">数量类型</string>
    <string name="food_materials_food_type_foodunit_set_up_defaultnumber">默认数量</string>
    <string name="food_materials_parameterschoose_radio_none">无前缀</string>
    <string name="food_materials_print_radio_showbili">显示比例</string>
    <string name="food_materials_print_radio_sizebili">字体比例</string>
    <string name="food_materials_parameterschoose_radio_bigcoding">大类编码为前缀</string>
    <string name="food_materials_parameterschoose_radio_smallcoding">小类编码为前缀</string>
    <string name="food_materials_food_parameters_digits">编码位：</string>
    <string name="food_materials_food_parameters_announcements">注意：当前缀选择大类编码时，编码位最多5位；选择小类编码时，编码位最多3位；选择无前缀时，编码位最多7位！</string>
    <string name="food_materials_print_size">大小调整</string>
    <string name="food_materials_print_install">打印设置</string>
    <string name="food_materials_print_mech">打印机</string>
    <string name="food_materials_print_pagesize">纸张大小</string>
    <string name="food_materials_print_preview">打印预览</string>
    <string name="food_materials_print_btchuli">批量处理</string>
    <string name="food_materials_print_direction_lengthways">纵向</string>
    <string name="food_materials_print_direction_crosswase">纵向</string>
    <string name="food_materials_print_direction_print">打印</string>
    <string name="food_materials_print_yesorno">是否厨打</string>
    <string name="food_materials_print_kitchenprint">厨房打印机</string>
    <string name="food_materials_print_isproduceprint">是否出品打印</string>
    <string name="food_materials_print_produceprint">出品打印机</string>
    <string name="food_materials_print_direction_excel">Excel</string>
    <string name="food_materials_print_direction_xml">XML</string>
    <string name="food_materials_print_printpage">打印页面:</string>
    <string name="food_materials_print_allpage">所有页</string>
    <string name="food_materials_print_currentpage">当前页</string>
    <string name="food_materials_print_scope">页码范围</string>
    <string name="food_materials_print_direction_prompt">请输入页码，单页逗号隔开，范围-隔开（如2,5,6-8）</string>
    <string name="food_materials_cashierway_code">代码</string>
    <string name="food_materials_cashierway_name">名称</string>
    <string name="food_materials_cashierway_shortcuts">快捷键</string>
    <string name="food_materials_cashierway_isnum">是否有编号</string>
    <string name="food_materials_cashierway_ismoney">是否有面额</string>
    <string name="food_materials_cashierway_ischange">是否找零</string>
    <string name="food_materials_cashierway_operating_income">是否营业收入</string>
    <string name="food_all_down_move">全下移↓↓</string>
    <string name="food_down_move">下移↓</string>
    <string name="food_up_move">上移↑</string>
    <string name="food_all_up_move">全上移↑↑</string>
    <string name="food_bit_1">批处理</string>
    <string name="member_management_membership_parameter_settings_text">会员参数设置</string>
    <string name="member_management_member_information_maintenance_text">会员资料维护</string>
    <string name="member_management_member_information_member_data_text">会员资料</string>
    <string name="member_management_member_state_management_text">会员状态管理</string>
    <string name="member_management_the_member_type_change_text">会员类型变更</string>
    <string name="member_management_members_of_integral_management_text">会员积分管理</string>
    <string name="member_management_recharge_text">会员充值</string>
    <string name="member_management_membership_report_text">会员报表</string>
    <string name="member_management_card_chip_clearance_text">卡芯片清除</string>
    <string name="member_management_mass_production_member_information_text">批量生成会员资料</string>
    <string name="member_manahement_member_of_the_public_settings_text">会员公共设置</string>
    <string name="member_manahement_card_set_text">卡设置</string>
    <string name="member_manahement_card_type_is_set_text">卡种类设置</string>
    <string name="member_manahement_recharge_text">充值</string>
    <string name="member_manahement_other_text">其他</string>
    <string name="member_manahement_loyalty_card_text">优惠卡(仅积分和折扣使用)</string>
    <string name="member_manahement_prepaid_phone_cards_text">充值卡(储蓄卡,预充值消费)</string>
    <string name="member_manahement_infuse_text">注:充值卡具有积分和折扣的功能</string>
    <string name="member_manahement_top_up_and_paid_in_amount_must_be_equal_text">充值与实收的金额必须相等</string>
    <string name="member_manahement_largest_amount_full_text">最大充值金额:</string>
    <string name="member_manahement_automatic_prepaid_phone_card_membership_payment_discount_text">充值卡会员付款时自动折扣</string>
    <string name="member_manahement_top_up_cards_must_all_pay_full_payment_text">充值卡付款必须全单满付</string>
    <string name="member_manahement_displayed_when_a_member_discount_discount_details_text">折扣时显示会员折扣详情</string>
    <string name="member_manahement_member_consumption_searchable_membership_card_text">会员消费时可查找会员卡</string>
    <string name="member_manahement_members_become_invalid_when_print_the_bill_text">会员作废的时候打印账单</string>
    <string name="frontwinefood_openboxText">开钱箱</string>
    <string name="tab2_text1">打印机接口类型：</string>
    <string name="tab2_text20">测试</string>
    <string name="tab2_text24">客显类型：</string>
    <string name="tab2_text25">端口：</string>
    <string name="tab2_text30">电子称型号：</string>
    <string name="setting2"> 打印机IP：</string>
    <string name="StringInfo140">打印机类型：</string>
    <string name="StringInfo141">打印机端口：</string>
    <string name="StringInfo173">打印机波特率设置:</string>
    <string name="new1">打印机测试</string>
    <string name="new2">刷卡器测试</string>
    <string name="new3">客显测试</string>
    <string name="new4">电子计价秤测试</string>
    <string name="new5">USB读卡器测试</string>
    <string name="new6">佳博条码打印机测试</string>
    <string name="new7">重量：</string>
    <string name="new8">取值</string>
    <string name="new9">点击测试按钮，关注客显是否显示100.00</string>
    <string name="new10">显示</string>
    <string name="new11">清空</string>
    <string name="new27">扫描枪测试</string>
</resources>