<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/new1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/new2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/new3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/new4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/new5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/new6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/new27" />
    </LinearLayout>

</RelativeLayout>