<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >
    
    <HorizontalScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_text24"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/tab2_spinner4_1"
            style="@style/spinner_style"
            android:entries="@array/sys_array11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tab2_text25"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/tab2_spinner4_2"
            style="@style/spinner_style"
            android:entries="@array/sys_array12" />
    </LinearLayout>
    </HorizontalScrollView>

    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new9"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new11" />

</LinearLayout>