<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tab2_text1"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/tab2_spinner1"
                    style="@style/spinner_style"
                    android:layout_width="100dp"
                    android:entries="@array/sys_array07" />

                <Button
                    android:id="@+id/frontPrintTest"
                    android:layout_width="85dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tab2_text20"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/qianxiangTest"
                    android:layout_width="85dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/frontwinefood_openboxText"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/StringInfo140"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/tab2_spinner7"
                    style="@style/spinner_style"
                    android:layout_width="200dp"
                    android:entries="@array/sys_array08" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/setting2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_ip"
                    style="@style/editstyle1"
                    android:layout_width="200dp"
                    android:digits=".0123456789"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/StringInfo141"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/serialSelect"
                    style="@style/spinner_style"
                    android:layout_width="200dp"
                    android:entries="@array/sys_array12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/StringInfo173"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/serialrateSet"
                    style="@style/spinner_style"
                    android:layout_width="200dp"
                    android:entries="@array/rateSet_array" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>